# Smart-Medical-Assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/auth/: dependencies.py  jwt_handler.py  oauth.py
app/core/: graph.py  state.py
app/nodes/: check_history.py  parsed_symptoms.py  predict_condition.py  primary_daignosis.py  recommend_action.py  search_doctors_nearby.py  secondary_diagnosis.py  suggest_doctor.py  symptom_parser.py  update_history.py
app/routes/: analyze.py  auth.py
app/services/: models.py  mongodb.py  redis_client.py
streamlit_app/: ui.py
